GPS-99: Implemetar lógica de asignación de roles de administrador
